<resources>
    <string name="app_name">CargoControl</string>
    <string name="user">Usuário</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="cargo">Cargo</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    
    <!-- Strings de inserção -->
    <string name="desc">Descrição</string>
    <string name="armazem">Armazém</string>

    <string name="cadprod">Cadastrar produto</string>
    <string name="rlztransf">Realizar transferência</string>
    <string name="consultas">Consultas</string>

    <string name="consultar_arm">Consultar armazéns</string>
    <string name="consultar_prod">Consultar produtos</string>
    <string name="consultar_transf">Consultar transferências</string>

    <string name="arm_saida">Armazém de saída</string>
    <string name="arm_destino">Armazém de destino</string>
    <string name="produto">Produto</string>

    <string name="arm_local">Local do armazém</string>

    <string name="prod_nome">Nome do produto</string>
    <string name="prod_desc">Descrição do produto</string>

    <string name="alterar_dados">Alterar dados</string>
    <string name="alterar_produto">Alterar produto</string>
    <string name="excluir_produto">Excluir produto</string>

</resources>
