<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".CadastroActivity">

    <EditText
        android:id="@+id/etLoginCadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200sp"
        android:hint="@string/user" />

    <EditText
        android:id="@+id/etSenhaCadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/senha"
        app:layout_constraintTop_toBottomOf="@id/etLoginCadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/etNomeCadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nome"
        app:layout_constraintTop_toBottomOf="@id/etSenhaCadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/etCargoCadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:hint="@string/cargo"
        app:layout_constraintTop_toBottomOf="@id/etNomeCadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/etCargoCadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cadastrar"
        android:textAllCaps="true"
        android:background="@color/btnColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>