<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".MenuAdminActivity">

    <Button
        android:id="@+id/btn1MenuAdmin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200sp"
        android:background="@color/btnColor"
        android:text="@string/cadprod"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn2MenuAdmin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn1MenuAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70sp"
        android:background="@color/btnColor"
        android:text="@string/rlztransf"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn3MenuAdmin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn2MenuAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70sp"
        android:background="@color/btnColor"
        android:text="@string/consultas"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn4MenuAdmin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn3MenuAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70sp"
        android:background="@color/btnColor"
        android:text="@string/alterar_dados"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>