<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etLoginMain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200sp"
        android:hint="@string/user"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etSenhaMain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etLoginMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"/>

    <Button
        android:id="@+id/btnLoginMain"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        app:layout_constraintTop_toBottomOf="@id/etSenhaMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login"
        android:textAllCaps="true"
        android:background="@color/btnColor"/>

    <Button
        android:id="@+id/btnCadastroMain"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/btnLoginMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cadastro"
        android:textAllCaps="true"
        android:background="@color/btnColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>