<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".InserirProdutoActivity">

    <EditText
        android:id="@+id/et1CadProduto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200sp"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/et2CadProduto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/desc"
        app:layout_constraintTop_toBottomOf="@id/et1CadProduto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/et3CadProduto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/armazem"
        app:layout_constraintTop_toBottomOf="@id/et2CadProduto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"/>

    <Button
        android:id="@+id/btnCadProduto"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/et3CadProduto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cadastrar"
        android:textAllCaps="true"
        android:background="@color/btnColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>